--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="container mt-4">
         <h1>Welcome to our COVID-19 Awareness Website</h1>
-		<img src="Images\covid-19-5073811_1280.jpg" height="500px" width="1000px">
+		<img src="covid-19-5073811_1280.jpg" height="500px" width="1000px">
         <p>This website provides information and guidelines on COVID-19.</p>
     </div>
 
@@ -26,7 +26,7 @@
 
 <div class="container mt-4">
     <h2>Vaccination Information</h2>
-	<img src="Images\injection-5873159_1280.jpg" height="500px" width="1000px">
+	<img src="injection-5873159_1280.jpg" height="500px" width="1000px">
     <p>COVID-19 vaccination is a critical tool in controlling the spread of the virus and protecting public health. Here, you can learn about the importance of vaccination and how to get vaccinated.</p>
     <p>Key points to consider:</p>
     <ul>
